[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "cloudflare-redirects-linter"
version = "0.0.1"
requires-python = ">= 3.8"
description = "Lint Cloudflare Pages _redirects files"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
keywords = ['CLI', 'Cloudflare', 'redirects']
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Internet :: WWW/HTTP :: Site Management',
    'Topic :: Software Development :: Debuggers',
    'Topic :: Software Development :: Testing :: Acceptance',
    'Topic :: Utilities',
    'Typing :: Typed',
]
dependencies = ["click-extra ~= 4.8.3"]

[project.urls]
"Homepage" = 'https://github.com/kdeldycke/cloudflare-redirects-linter'
"Repository" = 'https://github.com/kdeldycke/cloudflare-redirects-linter'
"Funding" = "https://github.com/sponsors/kdeldycke"
"Issues" = "https://github.com/kdeldycke/cloudflare-redirects-linter/issues"
"Changelog" = "https://github.com/kdeldycke/cloudflare-redirects-linter/changelog.md"

[project.scripts]
cflint = 'cflint.__main__:main'

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.bumpversion]
current_version = "0.0.1"
allow_dirty = true
ignore_missing_files = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in project section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("
